...
        ) {
            IconButton(onClick = {
                navController.popBackStack()
            }) {
                Column(horizontalAlignment = Alignment.CenterHorizontally) {
                    Icon(Icons.Default.ArrowBack, contentDescription = "", tint = Color.White)
                    Text(text = "BACK", color = Color.White, fontSize = 12.sp)
                }
            }

            IconButton(onClick = {
                if(isOnline(context)){
                    showVideoTitles.value = !showVideoTitles.value
...
                Column(horizontalAlignment = Alignment.CenterHorizontally) {
                    Icon(
                        if (state.value != null) Icons.Outlined.Favorite else Icons.Outlined.FavoriteBorder,
                        contentDescription = "", tint = color,
                        modifier = Modifier.size(20.dp),
                    )
                    Text(text = "FAVORITE", color = color, fontSize = 12.sp)
                }
            }
        }

        Text(
            text = "Vote Average: ${movie.voteAverage}\n\n" +
...
