...
        TextButton(
            onClick = {

                navController.navigate(Screen.SeeMore.route)
            },
        ) {
            Text(text = "Ver todos", color = Color.LightGray.copy(alpha = .6f), fontSize = 12.sp)
        }
        Icon(
            painter = painterResource(id = R.drawable.ic_right_arrow),
            contentDescription = null,
            tint = Color.LightGray.copy(alpha = .6f),
        )
...
